Fix gap behavior

--- a/assets/stylesheets/home.styl
+++ b/assets/stylesheets/home.styl
@@ -47,7 +47,6 @@
 	&--approach
 	&--about
 		@media (min-width: 600px)
-			margin-top 48px
 			margin-bottom 48px
 			padding-top 64px
 			padding-bottom 64px
@@ -91,6 +90,9 @@
 				transform translateY(-50%)
 
 	&--approach
+
+		@media (min-width: 600px)
+			margin-top 48px
 
 		&--main
 			padding 0 24px
